ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peppdp-service-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: peppdp.testing1.k8s-cluster.tango.rid-intrasoft.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: peppdp-service
                port:
                  number: 80
